fixed postLike and added docs for it
